<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">E-LogBook</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="action_search">TODO</string>
    <string name="button_log_in">Log In</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>

</resources>
